--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,19 +1,89 @@
-.nav{
-display: flex;
-justify-content: space-between;
-padding-top: 1%;
+.signup {
+    display: flex;
+    flex-direction: row;
 }
 
-.nav-left{
+.signup-left {
+    flex: 0.5;
+    background-color: #426B1F;
+    height: 100vh;
+}
+
+.signup-right {
+    flex: 0.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    /* display: grid;
+    place-items: center; */
 
 }
 
-.nav-left-content{
+.signup-head {
+    color: #426B1F;
+    margin: 0;
+}
+
+.signup-para {
+    color: #1A1B56;
+    width: 58%;
+}
+
+.signup-email {
+    padding: 10px;
+    width: 29vw;
+    height: 4vh;
+    border-radius: 10px;
+    border: 1px solid #8B8BAA;
+    margin: 5px;
+}
+
+.signup-user-btn {
+    margin: 0 2px;
+    background-color: white;
+    border: 1px solid #484978;
+    color: #484978;
+    border-radius: 10px;
+    height: 7vh;
+    width: 10vw;
+}
+
+.signup-user-btn-selected {
+    margin: 0 2px;
+    background-color: white;
+    border: 1px solid  #426B1F;
+    color: #426B1F;
+    border-radius: 10px;
+    height: 7vh;
+    width: 10vw;
+}
+
+.signup-sign-btn {
+    background-color: #426B1F;
+    border: 0;
+    height: 7vh;
+    width: 15vw;
+    border-radius: 20px;
+    color: white;
+}
+
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1%;
+}
+
+.nav-left {}
+
+.nav-left-content {
     padding-left: 100%;
     color: green;
 }
 
-.nav-right{
+.nav-right {
     /* flex: 0.7; */
     display: flex;
     justify-content: space-between;
@@ -21,61 +91,79 @@ padding-top: 1%;
     /* flex-direction: row; */
 }
 
-.nav-right-contents{
-    padding: 0 20px ;
+.nav-right-contents {
+    padding: 0 20px;
     display: flex;
     flex-direction: row;
 }
 
-.nav-right-content{
-padding: 0 10px;
+.nav-right-content {
+    padding: 0 10px;
 }
 
 
-.nav-right-contents-right{
-    margin-right:0;
+.nav-right-content-cart {
+    /* padding: 0;
+    margin: 0; */
+    /* -webkit-border-radius: 12;
+    -moz-border-radius: 12; */
+    border: 0;
+    margin-top: 8%;
+    border-radius: 12px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 15px;
+    background: #426B1F;
+    padding: 15px 35px 15px 35px;
+    text-decoration: none;
+    /* margin-right:0;
     background-color: green;
     color: green;
     border-radius: 10px;
-    padding: 0 50px;
+    padding: 0 50px; */
     /* padding: 30% 30px; */
 }
 
-.home{
+.nav-right-content-cart:hover {
+    background: #204d20;
+    text-decoration: none;
+}
+
+.home {
     display: flex;
     flex-direction: row;
 }
 
-.home-left{
-flex: 0.2;
-margin-left: 10%;
+.home-left {
+    flex: 0.2;
+    margin-left: 10%;
 }
 
-.home-left-heading{
-    margin:10px 0 ;
+.home-left-heading {
+    margin: 10px 0;
 }
 
-.home-left-item{
+.home-left-item {
     margin: 5px 0px;
     padding: 0 3px;
 }
 
-.home-left-items{
+.home-left-items {
     display: flex;
     flex-direction: row;
     padding: 5px;
     /* justify-content: space-between; */
 }
 
-.home-right{
-flex: 0.8;
-overflow: scroll;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
+.home-right {
+    flex: 0.8;
+    overflow: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.home-right-products{
+.home-right-products {
     /* display: flex;
     flex-direction: row; */
     width: 25%;
@@ -85,26 +173,232 @@ justify-content: space-between;
     margin-bottom: 30px;
 }
 
-.home-right-product{
+.home-right-product {
     padding: 0;
     margin: 0;
     text-align: center;
     /* border: 1px solid; */
 }
 
-.home-right-products img{
+.home-right-products img {
     /* display: flex;
     flex-direction: row; */
     width: 80%;
     padding: 8%;
-    border: 1px solid ;
+    border: 1px solid;
     border-radius: 4%;
     text-align: center;
     align-items: center;
 }
 
-@media screen and(max-width:4000em){
-    .nav-right-contentS{
+.cart-top {
+    margin-left: 5%;
+}
+
+
+.cart-bottom {
+    display: flex;
+    flex-direction: row;
+    /* width: 1000%; */
+}
+
+.cart-left {
+    /* border: 5px solid; */
+    padding: 0;
+    /* margin: 0; */
+}
+
+.cart-left-div {
+    flex: 0.7;
+    background-color: #FAFAF5;
+    border: 2px solid #E6E6E6;
+    border-radius: 10px;
+    margin: 10% 5%;
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    width: 80%;
+}
+
+.cart-left-item {
+    width: 20%;
+}
+
+.cart-left-items {
+    width: 100%;
+}
+
+.cart-right {
+    /* flex: 0.3; */
+    background-color: #FAFAF5;
+    border: 2px #E6E6E6 solid;
+    height: fit-content;
+    border-radius: 5%;
+    padding: 15px;
+    margin: 10% 0;
+}
+
+.cart-right-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* width: 600%; */
+}
+
+.cart-right-div button {
+    -webkit-border-radius: 13;
+    -moz-border-radius: 13;
+    border-radius: 13px;
+    font-family: Georgia;
+    color: #ffffff;
+    font-size: 20px;
+    background: #426B1F;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.addproduct-items {
+    margin: 3% 2% 1% 2%;
+}
+
+.addproduct-img {
+    width: 90%;
+    margin: 0 2%;
+    height: 150px;
+    border-radius: 20px;
+    border: 1px black solid;
+    /* border-color: black ; */
+}
+
+.addproduct-name {
+    width: 90%;
+    margin: 0 2%;
+    height: 80px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-details {
+    width: 90%;
+    margin: 0 2%;
+    height: 130px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-colors {
+    width: 90%;
+    margin: 0 2%;
+    height: 130px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-sizes {
+    width: 90%;
+    margin: 0 2%;
+    height: 130px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-last-div {
+    display: flex;
+    flex-direction: row;
+    margin: 3% 2% 1% 2%;
+}
+
+.addproduct-price-div {
+    flex: 0.25;
+}
+
+.addproduct-quantity-div {
+    flex: 0.25;
+}
+
+.addproduct-discount-div {
+    flex: 0.25;
+}
+
+.addproduct-price {
+    width: 80%;
+    margin: 0 2%;
+    height: 50px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-quantity {
+    width: 80%;
+    margin: 0 2%;
+    height: 50px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-discount {
+    width: 80%;
+    margin: 0 2%;
+    height: 50px;
+    border-radius: 20px;
+    border: 0;
+    background-color: rgba(243, 243, 243, 0.5)
+        /* border-color: black ; */
+}
+
+.addproduct-button {
+    margin-top: 3%;
+    flex: 0.15;
+    background-color: #426B1F;
+    padding: 0;
+    color: white;
+    border-radius: 10%;
+    border: 0;
+    /* text-size-adjust: 1000%; */
+    /* height: 100%; */
+    /* width: ; */
+}
+
+.payment {
+    display: flex;
+    flex-direction: row;
+}
+
+.payment-left {
+    flex: 0.65;
+}
+
+.payment-right {
+    flex: 0.35;
+    background-color: #FAFAF5;
+    border: 2px solid #E6E6E6;
+    border-radius: 40px;
+    margin: 5%;
+    padding: 2%;
+}
+
+.payment-left-div {
+    background-color: #FAFAF5;
+    border: 2px solid #E6E6E6;
+    border-radius: 40px;
+    margin: 5%;
+    padding: 2%;
+}
+
+@media screen and(max-width:4000em) {
+    .nav-right-contentS {
         flex-direction: column;
         display: none;
     }
